--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,6 +65,16 @@
             color: white;
             transition: background-color 0.3s;
         }
+        .logout {
+            padding: 9px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #007BFF;
+            color: white;
+            transition: background-color 0.3s;
+        }
         .input-field {
             margin: 10px 0;
             width: 100%;
@@ -81,8 +91,8 @@
             padding: 20px;
             background-color: white;
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 80%;
+            box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
+            width: 100%;
             max-width: 400px; 
         }
         .link {
@@ -90,8 +100,11 @@
         }
         .button:hover {
             background-color: white;
-            color: #007BFF;
-            
+            color: #007BFF;   
+        }
+        .logout:hover {
+            background-color: white;
+            color: #007BFF;   
         }
         .register {
             color: #007BFF;
