--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,9 @@
             flex-direction: column;
             align-items: center;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-image: url("{{ url_for('static', filename='images/BackgroundImage.1.jpeg') }}");
+            background-size: cover;
+            background-attachment: fixed;
             font-family: Arial, sans-serif;
             margin: 0;
         }
@@ -92,8 +94,8 @@
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px; 
+            width: 500px;
+            max-width: 1000px; 
         }
         .link {
             cursor: pointer;
