--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,6 +97,16 @@
             width: 500px;
             max-width: 1000px; 
         }
+        .main-content1 {
+            margin-top: 100px;
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
+            width: 800px;
+            max-width: 1000px; 
+        }
         .link {
             cursor: pointer;
         }
