Developed Customer and Service Professionals Dashboard with Service Request system with status tracking

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,6 +77,26 @@
             color: white;
             transition: background-color 0.3s;
         }
+        .logoutgreen {
+            padding: 9px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: green;
+            color: white;
+            transition: background-color 0.3s;
+        }
+        .logoutred {
+            padding: 9px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: red;
+            color: white;
+            transition: background-color 0.3s;
+        }
         .input-field {
             margin: 10px 0;
             width: 100%;
@@ -106,6 +126,36 @@
             box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
             width: 800px;
             max-width: 1000px; 
+        }
+        .main-content2 {
+            margin-top: 100px;
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
+            width: 800px;
+            max-width: 1000px; 
+        } 
+        .main-content3 {
+            margin-top: 100px;
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
+            width: 1200px;
+            max-width: 1200px; 
+        }     
+        .main-content4 {
+            margin-top: 100px;
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 1000px rgba(0, 0, 0, 0.1);
+            width: 1400px;
+            max-width: 1400px; 
         }
         .link {
             cursor: pointer;
